+ Add Example Code

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ CH02/Triangle/platform/win/Triangle/Debug/cl.command.1.tlog
 CH02/Triangle/platform/win/Triangle/Debug/link-cvtres.read.1.tlog
 CH02/Triangle/platform/win/Triangle/Debug/link-cvtres.write.1.tlog
 CH02/Triangle/platform/win/Triangle/Debug/link-rc.read.1.tlog
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Objects-normal/x86_64/Triangle.LinkFileList
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Objects-normal/x86_64/Triangle.d
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Objects-normal/x86_64/Triangle.dia
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Objects-normal/x86_64/Triangle.o
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Objects-normal/x86_64/Triangle_dependency_info.dat
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Triangle-all-non-framework-target-headers.hmap
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Triangle-all-target-headers.hmap
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Triangle-generated-files.hmap
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Triangle-own-target-headers.hmap
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Triangle-project-headers.hmap
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/Triangle.hmap
+CH02/Triangle/platform/mac/Build/Intermediates/Triangle.build/Debug/Triangle.build/dgph
