+ Add Example Code

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ CH02/Move/platform/win/Move/Debug/cl.command.1.tlog
 CH02/Move/platform/win/Move/Debug/link-cvtres.read.1.tlog
 CH02/Move/platform/win/Move/Debug/link-cvtres.write.1.tlog
 CH02/Move/platform/win/Move/Debug/link-rc.read.1.tlog
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Move-all-non-framework-target-headers.hmap
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Move-all-target-headers.hmap
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Move-generated-files.hmap
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Move-own-target-headers.hmap
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Move-project-headers.hmap
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Move.hmap
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Objects-normal/x86_64/Move.LinkFileList
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Objects-normal/x86_64/Move.d
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Objects-normal/x86_64/Move.dia
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Objects-normal/x86_64/Move.o
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Objects-normal/x86_64/Move_dependency_info.dat
+CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/dgph
