+ Add Sample Code

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,15 @@ CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Objects-n
 CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Objects-normal/x86_64/Move.o
 CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/Objects-normal/x86_64/Move_dependency_info.dat
 CH02/Move/platform/mac/Build/Intermediates/Move.build/Debug/Move.build/dgph
+CH02/Bounce/platform/Bounce/Bounce/Debug/CL.read.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/CL.write.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/link-cvtres.read.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/link-cvtres.write.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/link-rc.read.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/link-rc.write.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/link.command.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/link.read.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/link.write.1.tlog
+CH02/Bounce/platform/Bounce/Bounce/Debug/vc110.idb
+CH02/Bounce/platform/Bounce/Bounce/Debug/Bounce.lastbuildstate
+CH02/Bounce/platform/Bounce/Bounce/Debug/cl.command.1.tlog
