+ Add Example Code

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,15 @@ CH02/Bounce/platform/Bounce/Bounce/Debug/link.write.1.tlog
 CH02/Bounce/platform/Bounce/Bounce/Debug/vc110.idb
 CH02/Bounce/platform/Bounce/Bounce/Debug/Bounce.lastbuildstate
 CH02/Bounce/platform/Bounce/Bounce/Debug/cl.command.1.tlog
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Bounce-all-non-framework-target-headers.hmap
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Bounce-all-target-headers.hmap
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Bounce-generated-files.hmap
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Bounce-own-target-headers.hmap
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Bounce-project-headers.hmap
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Bounce.hmap
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Objects-normal/x86_64/Bounce.LinkFileList
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Objects-normal/x86_64/Bounce.d
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Objects-normal/x86_64/Bounce.dia
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Objects-normal/x86_64/Bounce.o
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/Objects-normal/x86_64/Bounce_dependency_info.dat
+CH02/Bounce/platform/mac/Build/Intermediates/Bounce.build/Debug/Bounce.build/dgph
